[gd_scene load_steps=2 format=3 uid="uid://yaw8v7u6t5s4"]

[ext_resource type="Script" path="res://ui/components/room_selector.gd" id="1_d4e5f"]

[node name="RoomSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d4e5f")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.12, 0.9)

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "Choose Your Path"
horizontal_alignment = 1

[node name="FloorInfo" type="Label" parent="CenterContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="TreeContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 60
